# control-ofc-daemon

./: .gitignore  CHANGELOG.md  README.md  Startup-issue.txt  claude.md  daemon.md
.github/workflows/: release-aur.yml
completions/: _control-ofc-daemon  control-ofc-daemon.bash  control-ofc-daemon.fish
daemon/: Cargo.toml  README.md
daemon/src/: config.rs  constants.rs  daemon_state.rs  error.rs  lib.rs  main.rs  polling.rs  profile.rs  profile_engine.rs  pwm.rs  runtime_config.rs  safety.rs
daemon/src/api/: calibration.rs  diagnostics.rs  handlers.rs  mod.rs  responses.rs  server.rs  sse.rs
daemon/src/api/handlers/: config.rs  gpu.rs  hw_diagnostics.rs  hwmon_ctl.rs  mod.rs  openfan.rs  profile.rs  status.rs
daemon/src/health/: cache.rs  history.rs  mod.rs  staleness.rs  state.rs
daemon/src/hwmon/: discovery.rs  gpu_detect.rs  gpu_fan.rs  lease.rs  mod.rs  pwm_control.rs  pwm_discovery.rs  reader.rs  types.rs  util.rs
daemon/src/serial/: controller.rs  mod.rs  protocol.rs  real_transport.rs  transport.rs
daemon/tests/: ipc_integration.rs
docs/: DEVELOPER_HANDOVER.md  USER_GUIDE.md
docs/ADRs/: 001-ipc-transport.md  002-runtime-config-split.md
man/: control-ofc-daemon.1.scd
packaging/: 99-control-ofc.rules  99-onlyfans.rules  PKGBUILD  control-ofc-daemon.install  control-ofc-daemon.service  control-ofc-restore-auto.sh  daemon.toml.example  onlyfans-daemon.service
packaging/modules-load.d/: control-ofc.conf
packaging/profiles/: quiet.json
scripts/: push-aur.sh  release-aur.sh
