[package]
name = "control-ofc-daemon"
version = "0.7.2"
edition = "2021"

[dependencies]
axum = "0.8"
ctrlc = "3"
env_logger = "0.11"
futures-util = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "io-util", "time"] }
tokio-stream = "0.1"
toml = "0.8"
tower = "0.5"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
